force-app/main/default/objects/Tower__c/fields/Booking_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Booking_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Booking creation enabled</description>
    <label>Booking Allowed</label>
    <type>Checkbox</type>
</CustomField>