force-app/main/default/objects/Tower__c/fields/Construction_Start__c.field-meta.xml
<CustomField>
    <fullName>Construction_Start__c</fullName>
    <label>Construction Start Date</label>
    <type>Date</type>
</CustomField>