force-app/main/default/objects/Tower__c/fields/Expected_Completion__c.field-meta.xml
<CustomField>
    <fullName>Expected_Completion__c</fullName>
    <label>Expected Completion Date</label>
    <type>Date</type>
</CustomField>