force-app/main/default/objects/Tower__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Parent project this tower belongs to.</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Towers</relationshipLabel>
    <relationshipName>Project_Towers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>