force-app/main/default/objects/Tower__c/fields/RERA_Tower_ID__c.field-meta.xml
<CustomField>
    <fullName>RERA_Tower_ID__c</fullName>
    <label>RERA Tower ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>