force-app/main/default/objects/Tower__c/fields/Sales_Active__c.field-meta.xml
<CustomField>
    <fullName>Sales_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Units available for sale</description>
    <label>Sales Active</label>
    <type>Checkbox</type>
</CustomField>