force-app/main/default/objects/Tower__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Construction</fullName>
                <default>true</default>
                <label>Under Construction</label>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Upcoming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>