force-app/main/default/objects/Tower__c/fields/Total_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Units__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of units in this tower.</description>
    <label>Total Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>