force-app/main/default/objects/Tower__c/fields/Tower_Status__c.field-meta.xml
<CustomField>
    <fullName>Tower_Status__c</fullName>
    <label>Tower Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Under Construction</fullName>
                <default>true</default>
                <label>Under Construction</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>