force-app/main/default/objects/Tower__c/validationRules/Actual_end_and_Expected_end_cant_be_less.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_end_and_Expected_end_cant_be_less</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(
        NOT(ISBLANK(Construction_Start__c)),
        NOT(ISBLANK(Actual_Completion__c)),
        Actual_Completion__c &lt; Construction_Start__c
    ),
    AND(
        NOT(ISBLANK(Construction_Start__c)),
        NOT(ISBLANK(Expected_Completion__c)),
        Expected_Completion__c &lt; Construction_Start__c
    )
)</errorConditionFormula>
    <errorMessage>Please check the dates. Completion dates must be after the Construction Start Date, and Actual Completion cannot be before Expected Completion.</errorMessage>
</ValidationRule>